<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SplashFragment">

    <fragment
        android:id="@+id/SplashFragment"
        android:name="com.alexanderbiehl.apps.zephirmediaplayer.activities.ui.fragments.SplashFragment"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_SplashFragment_to_MediaListFragment"
            app:destination="@id/MediaListFragment" />
    </fragment>

    <fragment
        android:id="@+id/MediaListFragment"
        android:name="com.alexanderbiehl.apps.zephirmediaplayer.activities.ui.fragments.MediaListFragment"
        android:label="@string/media_list_fragment_default_title"
        tools:layout="@layout/fragment_media_item_list">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/NowPlayingFragment" />
        <action
            android:id="@+id/action_mediaList_toPlaylists"
            app:destination="@id/PlaylistsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/NowPlayingFragment"
        android:name="com.alexanderbiehl.apps.zephirmediaplayer.activities.ui.fragments.NowPlayingFragment"
        android:label="@string/now_playing_fragment_title"
        tools:layout="@layout/fragment_now_playing">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/MediaListFragment" />
        <action
            android:id="@+id/action_NowPlayingFragment_to_QueueFragment"
            app:destination="@id/QueueFragment" />
    </fragment>

    <fragment
        android:id="@+id/QueueFragment"
        android:name="com.alexanderbiehl.apps.zephirmediaplayer.activities.ui.fragments.QueueFragment"
        android:label="@string/queue_fragment_title"
        tools:layout="@layout/fragment_queue">

        <action
            android:id="@+id/action_QueueFragment_to_NowPlayingFragment"
            app:destination="@id/NowPlayingFragment" />
    </fragment>

    <fragment
        android:id="@+id/PlaylistsFragment"
        android:name="com.alexanderbiehl.apps.zephirmediaplayer.activities.ui.fragments.PlaylistsFragment"
        android:label="@string/playlists_fragment_title"
        tools:layout="@layout/fragment_playlists">

        <!--        <action-->
        <!--            android:id="@+id/action_PlaylistsFragment_to_CreatePlaylistDialog"-->
        <!--            app:destination="@id/CreatePlaylistDialog" />-->
    </fragment>
</navigation>